// Copyright (c) 2024 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate service protocol, which is
// released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/proto/blob/main/LICENSE

syntax = "proto3";

import "common.proto";
import "google/protobuf/empty.proto";

package dev.restate.cluster_ctrl;

service ClusterCtrlSvc {
  rpc GetClusterState(ClusterStateRequest) returns (ClusterStateResponse);

  rpc TrimLog(TrimLogRequest) returns (google.protobuf.Empty);
}

message ClusterStateRequest {}

message ClusterStateResponse {}

message TrimLogRequest {
  uint64 log_id = 1;
  uint64 trim_point = 2;
}
